--- a/src/main/webapp/app/entities/user-app/user-app-detail.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-detail.component.html
@@ -29,6 +29,10 @@
                 <dd>
                     <span>{{userApp.rol}}</span>
                 </dd>
+                <dt><span>User</span></dt>
+                <dd>
+                    {{userApp.user?.id}}
+                </dd>
             </dl>
 
             <button type="submit"
