--- a/src/main/webapp/app/entities/institution/institution-detail.component.html
+++ b/src/main/webapp/app/entities/institution/institution-detail.component.html
@@ -1,51 +1,97 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="institution">
-            <h2><span>Institution</span> {{institution.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span>Name</span></dt>
-                <dd>
-                    <span>{{institution.name}}</span>
-                </dd>
-                <dt><span>Description</span></dt>
-                <dd>
-                    <span>{{institution.description}}</span>
-                </dd>
-                <dt><span>Logo</span></dt>
-                <dd>
-                    <span>{{institution.logo}}</span>
-                </dd>
-                <dt><span>Telephone</span></dt>
-                <dd>
-                    <span>{{institution.telephone}}</span>
-                </dd>
-                <dt><span>User</span></dt>
-                <dd>
-                    <div *ngIf="institution.user">
-                        <a [routerLink]="['/user-app', institution.user?.id, 'view']">{{institution.user?.id}}</a>
+<div *ngIf="institution">
+    <section id="user-profile">
+        <div class="row">
+            <div class="col-12">
+                <div class="card profile-with-cover">
+                    <div class="card-img-top img-fluid bg-cover height-300" style="background: url('https://i.ytimg.com/vi/sOfdDibgjbk/maxresdefault.jpg') 50%;"></div>
+                    <div class="media profil-cover-details row">
+                        <div class="col-5">
+                            <div class="align-self-start halfway-fab pl-3 pt-2">
+                                <div class="text-left">
+                                    <h3 class="card-title white">{{institution.name}}</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="align-self-center halfway-fab text-center">
+                                <a class="profile-image">
+                                    <img src="https://lh3.googleusercontent.com/2aJfB6trLglywvIh6MSN58qh-r2b-_2GoXk4dWL5fIZmMAWdTN3f98Ugpi6U_glIm0w" class="rounded-circle img-border gradient-summer width-100" alt="Card image">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                        </div>
                     </div>
-                </dd>
-                <dt><span>Membership</span></dt>
-                <dd>
-                    <div *ngIf="institution.membership">
-                        <a [routerLink]="['/membership', institution.membership?.id, 'view']">{{institution.membership?.id}}</a>
+                    <div class="profile-cover-buttons">
+                        <div class="media-body halfway-fab align-self-end">
+                            <div class="text-right d-none d-sm-none d-md-none d-lg-block">
+                                <button type="button" class="btn btn-primary btn-raised mr-2" (click)="previousState()"><i class="ft ft-arrow-left"></i> Atrás</button>
+                                <button type="button" class="btn btn-success btn-raised mr-3" [routerLink]="['/institution', institution.id, 'edit']"><i class="ft ft-edit"></i> Modificar</button>
+                            </div>
+                        </div>
                     </div>
-                </dd>
-            </dl>
-
-            <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
-                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span> Back</span>
-            </button>
-
-            <button type="button"
-                    [routerLink]="['/institution', institution.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Edit</span>
-            </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Basic User Details Ends-->
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Información general</h5>
+                </div>
+                <div class="card-body">
+                    <hr>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <ul class="no-list-style">
+                                <li class="mb-2">
+                                    <span class="text-bold-500 primary"><a><i class="icon-present font-small-3"></i> Nombre:</a></span>
+                                    <span class="display-block overflow-hidden">{{institution.name}}</span>
+                                </li>
+                                <li class="mb-2" *ngIf="institution.user">
+                                    <span class="text-bold-500 primary"><a><i class="ft-map-pin font-small-3"></i> Usuario:</a></span>
+                                    <span class="display-block overflow-hidden" [routerLink]="['/user-app', institution.user?.id, 'view']">{{institution.user.name}}</span>
+                                </li>
+                                <li class="mb-2" *ngIf="institution.user">
+                                    <span class="text-bold-500 primary"><a><i class="ft-globe font-small-3"></i> Dirección:</a></span>
+                                    <span class="display-block overflow-hidden" [routerLink]="['/user-app', institution.user?.id, 'view']">{{institution.user.address}}</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <ul class="no-list-style">
+                                <li class="mb-2">
+                                    <span class="text-bold-500 primary"><a><i class="ft-user font-small-3"></i> Descripción:</a></span>
+                                    <span class="display-block overflow-hidden">{{institution.description}}</span>
+                                </li>
+                                <li class="mb-2" *ngIf="institution.user">
+                                    <span class="text-bold-500 primary"><a><i class="ft-mail font-small-3"></i> Cédula jurídica:</a></span>
+                                    <span class="display-block overflow-hidden" [routerLink]="['/user-app', institution.user?.id, 'view']">{{institution.user.identificationNumber}}</span>
+                                </li>
+                                <li class="mb-2" *ngIf="institution.membership">
+                                    <span class="text-bold-500 primary"><a><i class="ft-mail font-small-3"></i> Membresía:</a></span>
+                                    <span class="display-block overflow-hidden" [routerLink]="['/membership', institution.membership?.id, 'view']">{{institution.membership.typeMembership}}</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <ul class="no-list-style">
+                                <li class="mb-2">
+                                    <span class="text-bold-500 primary"><a><i class="ft-smartphone font-small-3"></i> Teléfono:</a></span>
+                                    <span class="display-block overflow-hidden">{{institution.telephone}}</span>
+                                </li>
+                                <li class="mb-2" *ngIf="institution.user">
+                                    <span class="text-bold-500 primary"><a><i class="ft-briefcase font-small-3"></i> E-mail:</a></span>
+                                    <span class="display-block overflow-hidden" [routerLink]="['/user-app', institution.user?.id, 'view']">{{institution.user.mail}}</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
