--- a/src/main/webapp/app/entities/institution/institution.component.html
+++ b/src/main/webapp/app/entities/institution/institution.component.html
@@ -1,72 +1,76 @@
-<div>
-    <h2 id="page-heading">
-        <span>Institutions</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-institution" [routerLink]="['/institution/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span >
-            Create new Institution
+<div class="row">
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Instituciones
+                    <button id="jh-create-entity" class="btn btn-raised btn-primary float-right" [routerLink]="['/institution/new']">
+                        <i class="ft-plus"></i>
+                        <span >
+            Registrar nueva institución
             </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <br/>
-    <div class="table-responsive" *ngIf="institutions">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Name</span></th>
-            <th><span>Description</span></th>
-            <th><span>Logo</span></th>
-            <th><span>Telephone</span></th>
-            <th><span>User</span></th>
-            <th><span>Membership</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let institution of institutions ;trackBy: trackId">
-                <td><a [routerLink]="['/institution', institution.id, 'view' ]">{{institution.id}}</a></td>
-                <td>{{institution.name}}</td>
-                <td>{{institution.description}}</td>
-                <td>{{institution.logo}}</td>
-                <td>{{institution.telephone}}</td>
-                <td>
-                    <div *ngIf="institution.user">
-                        <a [routerLink]="['../user-app', institution.user?.id, 'view' ]" >{{institution.user?.id}}</a>
+                    </button>
+                </h4>
+            </div>
+            <div class="card-body">
+                <div class="card-block">
+                    <jhi-alert></jhi-alert>
+                    <div class="table-responsive" *ngIf="institutions">
+                        <table class="table table-responsive-md text-center">
+                            <thead>
+                            <tr>
+                                <th><span>ID</span></th>
+                                <th><span></span></th>
+                                <th><span>Nombre</span></th>
+                                <th><span>Descripción</span></th>
+                                <th><span>Logo</span></th>
+                                <th><span>Teléfono</span></th>
+                                <th><span>Usuario</span></th>
+                                <th><span>Membresía</span></th>
+                                <th><span>Acciones</span></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let institution of institutions ;trackBy: trackId">
+                                <td><a [routerLink]="['/institution', institution.id, 'view' ]">{{institution.id}}</a></td>
+                                <td>
+                                    <div class="custom-control custom-checkbox m-0">
+                                        <input type="checkbox" class="custom-control-input" id="{{institution.id}}">
+                                        <label class="custom-control-label" for="{{institution.id}}"></label>
+                                    </div>
+                                </td>
+                                <td>{{institution.name}}</td>
+                                <td>{{institution.description}}</td>
+                                <td>{{institution.logo}}</td>
+                                <td>{{institution.telephone}}</td>
+                                <td>
+                                    <div *ngIf="institution.user">
+                                        <a [routerLink]="['../user-app', institution.user?.id, 'view' ]" >{{institution.user?.name}}</a>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div *ngIf="institution.membership">
+                                        <a [routerLink]="['../membership', institution.membership?.id, 'view' ]" >{{institution.membership?.id}}</a>
+                                    </div>
+                                </td>
+                                <td>
+                                    <a class="info p-0" data-original-title="" title="" [routerLink]="['/institution', institution.id, 'view' ]">
+                                        <i class="ft-user font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="success p-0" data-original-title="" title="" [routerLink]="['/institution', institution.id, 'edit']">
+                                        <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="danger p-0" data-original-title="" title="" [routerLink]="['/', 'institution', { outlets: { popup: institution.id + '/delete'} }]"
+                                       replaceUrl="true"
+                                       queryParamsHandling="merge">
+                                        <i class="ft-x font-medium-3 mr-2"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </td>
-                <td>
-                    <div *ngIf="institution.membership">
-                        <a [routerLink]="['../membership', institution.membership?.id, 'view' ]" >{{institution.membership?.id}}</a>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/institution', institution.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/institution', institution.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', 'institution', { outlets: { popup: institution.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
