--- a/src/main/webapp/app/entities/user-app/user-app-form.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-form.component.html
@@ -1,60 +1,71 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-user-app-heading">Create or edit a User App</h2>
+            <h2 id="jhi-user-app-heading">Formulario de registro:</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!userApp.id">
                     <label for="id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="userApp.id" readonly />
+                           [(ngModel)]="userApp.id" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_name">Name</label>
+                    <label class="form-control-label" for="field_name">Nombre</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="userApp.name" required/>
+                           [(ngModel)]="userApp.name" required/>
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.name?.errors?.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.name?.errors?.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_identificationNumber">Identification Number</label>
                     <input type="text" class="form-control" name="identificationNumber" id="field_identificationNumber"
-                        [(ngModel)]="userApp.identificationNumber" required/>
+                           [(ngModel)]="userApp.identificationNumber" required/>
                     <div [hidden]="!(editForm.controls.identificationNumber?.dirty && editForm.controls.identificationNumber?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.identificationNumber?.errors?.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.identificationNumber?.errors?.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_mail">Mail</label>
                     <input type="text" class="form-control" name="mail" id="field_mail"
-                        [(ngModel)]="userApp.mail" required/>
+                           [(ngModel)]="userApp.mail" required/>
                     <div [hidden]="!(editForm.controls.mail?.dirty && editForm.controls.mail?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.mail?.errors?.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.mail?.errors?.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_address">Address</label>
                     <input type="text" class="form-control" name="address" id="field_address"
-                        [(ngModel)]="userApp.address" />
+                           [(ngModel)]="userApp.address" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_password">Password</label>
+                    <input type="text" class="form-control" name="password" id="field_password"
+                           [(ngModel)]="userApp.password" required/>
+                    <div [hidden]="!(editForm.controls.password?.dirty && editForm.controls.password?.invalid)">
+                        <small class="form-text text-danger"
+                               [hidden]="!editForm.controls.password?.errors?.required">
+                            This field is required.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_rol">Rol</label>
                     <input type="text" class="form-control" name="rol" id="field_rol"
-                        [(ngModel)]="userApp.rol" required/>
+                           [(ngModel)]="userApp.rol" required/>
                     <div [hidden]="!(editForm.controls.rol?.dirty && editForm.controls.rol?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.rol?.errors?.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.rol?.errors?.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
