--- a/src/main/webapp/app/entities/user-app/user-app-form.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-form.component.html
@@ -16,7 +16,7 @@
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
                                [hidden]="!editForm.controls.name?.errors?.required">
-                            This field is required.
+                            Este campos es requerido.
                         </small>
                     </div>
                 </div>
