--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -52,7 +52,7 @@
 
                                     <div class="form-group">
                                         <label for="name"><i class="ft-user"></i> Nombre</label>
-                                        <input type="text" class="form-control"  [(ngModel)]="registerAccount.login" id="name" name="name" #login="ngModel" placeholder="Nombre"
+                                        <input type="text" class="form-control"  [(ngModel)]="userApp.name" id="name" name="name"  placeholder="Nombre"
                                                required>
                                         <div *ngIf="login.dirty && login.invalid">
                                             <small class="form-text text-danger" *ngIf="login.errors.required">
@@ -63,7 +63,7 @@
 
                                     <div class="form-group">
                                         <label for="identification"><i class="ft-hash"></i> Número de identificación</label>
-                                        <input type="text" class="form-control"  [(ngModel)]="registerAccount.login" id="identification" name="login" #login="ngModel" placeholder="Número de identificación"
+                                        <input type="text" class="form-control" [(ngModel)]="userApp.identificationNumber" id="identification" name="login" #login="ngModel" placeholder="Número de identificación"
                                                required minlength="1" maxlength="200">
                                         <div *ngIf="login.dirty && login.invalid">
                                             <small class="form-text text-danger" *ngIf="login.errors.required">
@@ -83,7 +83,7 @@
                                     <div class="form-group">
                                         <label for="email"><i class="ft-at-sign"></i> Correo electronico</label>
                                         <input type="email" class="form-control" id="email" name="email" #email="ngModel" placeholder="ejemplo@correo.com"
-                                               [(ngModel)]="registerAccount.email" minlength=5 maxlength=254 email required>
+                                               [(ngModel)]="userApp.mail" [(ngModel)]="registerAccount.email" minlength=5 maxlength=254 email required>
                                         <div *ngIf="email.dirty && email.invalid">
                                             <small class="form-text text-danger" *ngIf="email.errors.required"
                                             >
@@ -106,7 +106,7 @@
 
                                     <div class="form-group">
                                         <label for="address"><i class="ft-globe"></i> Dirección</label>
-                                        <input type="text" class="form-control"  [(ngModel)]="registerAccount.login" id="address" name="address" #login="ngModel" placeholder="Dirección">
+                                        <input type="text" class="form-control"  [(ngModel)]="userApp.address" id="address" name="address" #login="ngModel" placeholder="Dirección">
                                     </div>
 
                                     <div class="form-group">
@@ -127,6 +127,9 @@
                                                 Your password cannot be longer than 50 characters.
                                             </small>
                                         </div>
+                                        <p></p>
+                                        <label>Fortaleza:</label>
+
                                         <jhi-password-strength-bar [passwordToCheck]="registerAccount.password"></jhi-password-strength-bar>
                                     </div>
 
@@ -153,11 +156,11 @@
                                     <div class="form-group">
                                         <label>Que tipo de usuario desea ser?</label>
                                         <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+                                            <input type="radio" id="customRadioInline1" value="institution" name="customRadioInline1" class="custom-control-input" (change)="setRole('institution')">
                                             <label class="custom-control-label" for="customRadioInline1">Institución</label>
                                         </div>
                                         <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="customRadioInline2" checked name="customRadioInline1" class="custom-control-input">
+                                            <input type="radio" id="customRadioInline2" value="participant" checked name="customRadioInline1"  class="custom-control-input" (change)="setRole('participant')">
                                             <label class="custom-control-label" for="customRadioInline2">Participante</label>
                                         </div>
                                     </div>
