Mantenimiento participante y prototipo navbar
Mantenimiento con estilos para el participante y prototipo inicial de un navbar

--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -2,7 +2,7 @@
     <div _ngcontent-c5="" class="col-md-6">
         <div _ngcontent-c5="" class="card">
             <div _ngcontent-c5="" class="card-header">
-                <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Modificar participante</h4>
+                <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Crear un participante</h4>
             </div>
             <div _ngcontent-c5="" class="card-body">
                 <div _ngcontent-c5="" class="px-3">
@@ -94,6 +94,12 @@
                                     </div>
                                 </div>
 
+                            </div>
+
+                            <div _ngcontent-c5="" class="form-group">
+                                <label _ngcontent-c16="">Seleccionar imagen</label>
+                                <input _ngcontent-c16="" class="form-control-file" name="picture" id="field_picture"
+                                       [(ngModel)]="participant.picture" type="file">
                             </div>
 
                             <h4 _ngcontent-c5="" class="form-section">
