--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -5,6 +5,11 @@
 Navbar
 ========================================================================== */
 
+.navbar {
+    padding: 0.75rem 1.5rem;
+    padding-bottom: 0;
+}
+
 .navbar-version {
     font-size: 0.65em;
     color: $navbar-dark-color;
@@ -15,39 +20,14 @@ Navbar
     width: 1.75em;
 }
 
-.navbar {
-    padding: 0.2rem 1rem;
-    .dropdown-item.active,
-    .dropdown-item.active:focus,
-    .dropdown-item.active:hover {
-        background-color: $dark;
-    }
-
-    ul.navbar-nav {
-        .nav-item {
-            margin-left: 0.5em;
-        }
-    }
-
-    a.nav-link {
-        font-weight: 400;
-    }
-
-    .navbar-toggler {
-        &:hover {
-            color: $navbar-dark-hover-color;
-        }
-    }
-}
-
 /* ==========================================================================
 Logo styles
 ========================================================================== */
 .logo-img {
     height: 45px;
-    width: 45px;
+    width: 125px;
     display: inline-block;
     vertical-align: middle;
-    background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
+    background: url('../../../content/images/palaver.png') no-repeat center center;
     background-size: contain;
 }
